# multi_robot_model_based_diffusion

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
mrmbd/: __init__.py  butterworth.py  utils.py
mrmbd/envs/: __init__.py  carroponte.py  class_carroponte.py  class_manipulator.py  class_overhead_crane.py  manipulator.py  multi_car.py
mrmbd/planners/: __init__.py  lid_crane.py  lid_multicar.py  lid_rrpr.py
mrmbd/scripts/: cosine.py  graphic.py  graphic_crane.py  graphic_man.py  inference_d4orm.py  inference_mbd.py
scripts/: benchmark.py  sweep_pid.py  sweep_underdamped.py
src/mrmbd/: butterworth.py  utils.py
src/mrmbd/envs/: __init__.py  class_manipulator.py  class_overhead_crane.py  multi_car.py  overhead_crane.py
src/mrmbd/planners/: lid_crane.py  lid_multicar.py  lid_rrpr.py
src/mrmbd/scripts/: graphic.py  graphic_crane.py  graphic_man.py  inference_d4orm.py  inference_mbd.py
src/mrmbd/utils/: __init__.py  core.py  plotting.py
