[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mrmbd"
version = "0.0.1"
authors = [
    {name = "Davide De Benedittis", email = "davide.debenedittis@gmail.com"},
    {name = "Marta Antonucci"},
]
dependencies = [
    "flax",
    "jax",
    "matplotlib",
    "numpy",
    "scipy",
    "sympy",
    "tqdm",
    "tyro",
]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]

[tool.setuptools.packages.find]
include = ["mrmbd", "mrmbd.*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "SIM", "RET"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
docstring-code-format = true
